Article page polishing (minor spacing issues). Removed testing console.log. Remove hamburger icon inline color, moved it to css to fix teaser icon colors.

--- a/styles/components/article/_article.scss
+++ b/styles/components/article/_article.scss
@@ -51,7 +51,7 @@
     &__title {
         @include content-expanded-width();
         @include type-article-title();
-        margin-top: -1px;
+        margin-top: 15px;
 
         @media #{$medium-up} {
             margin: {
@@ -85,6 +85,14 @@
 
         @media #{$medium-up} {
             margin-bottom: 30px;
+        }
+
+        figcaption {
+            display: none;
+
+            @media #{$medium-up} {
+                display: block;
+            }
         }
     }
 
