--- a/styles/components/bxm/_social-share.scss
+++ b/styles/components/bxm/_social-share.scss
@@ -2,8 +2,8 @@
     background: transparent;
     border: 0;
     font-weight: 500;
-    margin-bottom: 27px;
-    margin-top: 25px;
+    margin-bottom: 25px;
+    margin-top: 20px;
     padding: 0;
     text-align: center;
     white-space: nowrap;
