--- a/styles/helpers/_colors.scss
+++ b/styles/helpers/_colors.scss
@@ -31,3 +31,4 @@ $color-white: #fff;
 // Other
 $line-color: #ddd;
 $color-section-separator: #e5e5e5;
+$color-header-menu-button: #555;
